<resources>
    <string name="app_name">Truck Budget</string>
    <string name="push_to_add">Push to add</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="order_info">Order info:</string>
    <string name="customer">Customer</string>
    <string name="cargo">Cargo</string>
    <string name="volume_m3">Volume, m3</string>
    <string name="weight_ton">Weight, ton</string>
    <string name="loading_type">Loading type:</string>
    <string name="route">Route</string>
    <string name="payment_date">Payment date</string>
    <string name="receiving_date">Receiving date</string>
    <string name="sending_documents_track_number">Sending documents track number</string>
    <string name="days_to_pay">Days to pay:</string>
    <string name="cost">Cost</string>
    <string name="payment">Payment</string>
    <string name="paid">paid</string>
    <string name="finished">finished</string>
    <string name="pending">pending</string>
    <string name="back">Back</string>
    <string name="finish_route">Finish route</string>
    <string name="empty_orders">empty_orders</string>
    <string name="add_order_button">add order button</string>
    <string name="fuel_price">Fuel price:</string>
    <string name="advance">Advance:</string>
    <string name="count">Count</string>
    <string name="income">Income:</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="subsistence">Subsistence:</string>
    <string name="other_expenses">Other expenses</string>
    <string name="driver_salary">Driver salary</string>
    <string name="net_income">Net income:</string>
    <string name="close">close</string>
    <string name="ok">OK</string>
    <string name="documents">Documents</string>
    <string name="cargo_name">Cargo name</string>
    <string name="payment_status">Payment status</string>
    <string name="manager">Manager:</string>
    <string name="company_name_with_asterisk">Company name*</string>
    <string name="ati_number">ATI number</string>
    <string name="phone_number">Phone number</string>
    <string name="edit">Edit</string>
    <string name="add_employee">Add Employee</string>
    <string name="from">from</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="sign_out">sign out</string>
    <string name="remove">Remove</string>
    <string name="new_route">New Route</string>
    <string name="inn">INN</string>
    <string name="ogrn">OGRN</string>
    <string name="legal_address">Legal address</string>
    <string name="post_address">Post address</string>
    <string name="short_name">Short name</string>
    <string name="all_companies">All companies</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no">no</string>
    <string name="any" />
    <string name="choose_month">Choose the month</string>
    <string name="search">Search</string>
    <string name="required_field">*required field</string>
    <string name="legal_information">Legal information</string>
    <string name="main">Main</string>
    <string name="contact_information">Contact information</string>
    <string name="company_name">Company name</string>
    <string name="saved">Saved</string>
    <string name="debt">Debt</string>
    <string name="unpaid">Unpaid</string>
    <string name="month">Month</string>
    <string name="filtered_by">Filtered by</string>
    <string name="fill_requested_fields">Fill requested fields</string>
    <string name="employee">Employee</string>
    <string name="name_with_asterisk">Name*</string>
    <string name="plate_number">Plate number*</string>
    <string name="region">Region*</string>
    <string name="create_new_truck">Create new truck</string>
    <string name="create_new_trailer">Create new trailer</string>
    <string name="create_new_truck_driver">Create new truck driver</string>
    <string name="create_new_partner">Create new partner</string>
    <string name="my_company">My Company</string>
    <string name="contractor">Contractor:</string>
    <string name="truck_driver">Truck driver:</string>
    <string name="moneyToPay">Money to pay:</string>
    <string name="contractor_s_cost">Contractor\'s cost</string>
    <string name="rub">"rub"</string>
    <string name="fuel_cost">Fuel cost</string>
    <string name="round">Round</string>
    <string name="add_500">Add 500</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="routes">Routes</string>
    <string name="companies">Companies</string>
    <string name="home">Home</string>
    <string name="truck_fleet">Truck fleet</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="choose_the_item">Choose the item</string>
    <string name="add_documents">Add documents</string>
    <string name="add_cargo">Add cargo</string>
    <string name="add_payment">Add payment</string>
    <string name="add_points">Add points</string>
    <string name="truck_drivers">Truck Drivers</string>
    <string name="trailers">Trailers</string>
    <string name="trucks">Trucks</string>
    <string name="add_company">Add Company</string>
    <string name="vehicles">Vehicles</string>
    <string name="removed">Removed</string>
    <string name="created">Created</string>
    <string name="paid_order">Paid</string>
    <string name="unpaid_order">Unpaid</string>
    <string name="mark_as_unpaid">Mark as unpaid</string>
    <string name="mark_as_paid">Mark as paid</string>
    <string name="add_point">Add point</string>
    <string name="add_the_point">Add the point</string>
    <string name="create_new_employee">Create new employee</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="w_o_fee">W/o fee</string>
    <string name="with_fee">With fee</string>
    <string name="statistics">Statistics</string>
    <string name="expenses">Expenses</string>
    <string name="year">Year</string>
    <string name="add_to_prepay">Add to Prepay</string>
    <string name="distanse_km">Distanse, km</string>
    <string name="finishing_route">Finishing route</string>
    <string name="choose_year">Choose year</string>
    <string name="change_home_company_name_advise">This default home company. Can change home company name later. Also created default truck driver, truck and trailer. These can be changed later too.</string>
    <string name="success">Success</string>
    <string name="frag_order_text_start_marging" translatable="false">16dp</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="call">Call</string>
    <string name="cargo_description">Cargo description</string>
    <string name="order_price">Order price</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="route_profit">Route profit</string>
    <string name="customers">Customers</string>
    <string name="truck_driver_company_contractor">Truck driver (Company contractor)</string>
    <string name="route_number">Route number</string>
    <string name="expenseDescription">Expense description</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_price">Expense price</string>
    <string name="date">Date</string>
    <string name="expense">Expense</string>
    <string name="price">Price*</string>
    <string name="name">Name</string>
    <string name="company_transport">Company transport</string>
    <string name="not_company_transport">Not company transport</string>
    <string name="average_profit">Average profit</string>
    <string name="year_profit">Year profit</string>
    <string name="year_expense">Year expense</string>
    <string name="general">General</string>
    <string name="new_company">New company</string>
    <string name="share">Share</string>
    <string name="home_company_sign">Home Company Sign</string>
    <string name="fav_company_sign">fav company sign</string>
    <string name="extra_phone_number">Extra phone number</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">e-mail</string>
    <string name="comment">Comment</string>
    <string name="employee_name">Employee name</string>
    <string name="add_employee_name">Add employee name</string>
    <string name="add_extra_phone_number">Add extra phone number</string>
    <string name="make_it_main_number">Make it main</string>
    <string name="add_driver_s_name">Add driver\'s name</string>
    <string name="truck_driver_s_name">Truck driver\'s name</string>
    <string name="passport">Passport</string>
    <string name="add_passport_s_data">Add passport\'s data</string>
    <string name="driver_license">Driver license</string>
    <string name="add_driver_license_data">Add driver license data</string>
    <string name="address">Address</string>
    <string name="add_address">Add address</string>
    <string name="add_commentary">Add commentary</string>
    <string name="plate">Plate</string>
    <string name="add_plate">Add plate</string>
    <string name="vin">VIN</string>
    <string name="add_vin">Add VIN</string>
    <string name="model">Model</string>
    <string name="manufacture_year">Manufacture year</string>
    <string name="add_manufacture_year">Add manufacture year</string>
    <string name="add_transport_type">Add transport type</string>
    <string name="transport_type">Transport type</string>
    <string name="add_model_of_transport">Add model of transport</string>
    <string name="profit">Profit</string>
    <string name="finish">Finish</string>
    <string name="calculate_and_finish">Calculate and finish</string>
    <string name="add_order">Add order</string>
    <string name="debt_to_us">Debt to us</string>
    <string name="YandexClientId" translatable="false">4e2906c578da49febf2dbf62eb3081ba</string>
    <string name="road_fee">Road fee</string>
    <string name="road_taxes_and_other">Road taxes and other</string>
    <string name="uploaded_to_yandex_disk_successfully">All data uploaded to Yandex Disk successfully</string>
    <string name="user_s_image">user\'s image</string>
    <string name="authorize">Get authorized</string>
    <string name="continue_localy">Continue localy</string>
    <string name="continue_with_yandex">Continue with Yandex</string>
    <string name="or">or</string>
    <string name="download_data_from_yandex">Download from Yandex Disk</string>
    <string name="will_replace_local_data_base">will replace local data base</string>
    <string name="continue_with_local_data">Database from this device</string>
    <string name="will_replace_data_on_yandex_disk">New user. This will replace data on Yandex Disk</string>
    <string name="which_data_base_we_use">Which data base we use?</string>
    <string name="old_user">Old user</string>
    <string name="copy">Copy</string>
    <string name="my_transport">My transport</string>
    <string name="add_to_templates">Add to templates</string>
    <string name="vehicleInfo">Vehicle info</string>
    <string name="route_advance">Route advance</string>
    <string name="result">Result</string>
</resources>