<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.LinearProgressIndicator"
        android:visibility="gone"
        />

    <include
        android:id="@+id/actionBar"
        layout="@layout/general_info_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate"
            style="@style/TextAppearance.MyValueDescription"
            />
        <TextView
            android:id="@+id/regNumberValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MyValue"
            android:hint="@string/add_plate"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vin"
            style="@style/TextAppearance.MyValueDescription"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/vinValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_vin"
            style="@style/TextAppearance.MyValue"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            style="@style/TextAppearance.MyValueDescription"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/modelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MyValue"
            android:hint="@string/add_model_of_transport"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport_type"
            style="@style/TextAppearance.MyValueDescription"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/typeOfTransportValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MyValue"
            android:hint="@string/add_transport_type"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MyValueDescription"
            android:text="@string/manufacture_year"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/yearOfManufacturingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_manufacture_year"
            style="@style/TextAppearance.MyValue"
            android:text=""
            />


    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>